# impact_measurement_tool

./: README.md  requirements.txt
app/connectors/: base.py  polon.py  radon.py
app/models/: __init__.py  evaluation.py  scientific_product.py
app/repositories/: impact_repository.py
app/scripts/: ingest_radon_impacts.py  ingest_radon_impacts_all.py
impact_measurement_tool/: README.md  impacts.json  pyproject.toml
impact_measurement_tool/app/data/: institutions.txt
impact_measurement_tool/app/models/: __init__.py  funding.py  impact_case.py
impact_measurement_tool/app/repositories/: impact_repository.py
impact_measurement_tool/app/scripts/: download_impacts.py  ingest_radon_impacts.py
impact_measurement_tool_v2/: gitignore
impact_measurement_tool_v2/app/: main.py
impact_measurement_tool_v2/app/api/: impacts.py
impact_measurement_tool_v2/app/db/: mongo.py
impact_measurement_tool_v2/app/models/: __init__.py  impact_case.py
impact_measurement_tool_v2/app/scripts/: download_impacts.py
models/: beneficiaries.py  entities.py  identifiers.py  impact.py
